# QuickTransfer-Cpp-client

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  test.cpp
Libs/: curl.hpp  notification.hpp
